--- a/TP04/Ex2/resposiveMenu.html
+++ b/TP04/Ex2/resposiveMenu.html
@@ -11,20 +11,20 @@
     <div class="container">
         <div class="main-menu">
             <div class="content">
-                  <h1>Our Menu</h1>
-                  <hr>
+                <h1>Our Menu</h1>
+                <hr>
             </div>
             <div class="list-menu">
-                    <div>All</div>
-                    <div>Breakfast</div>
-                    <div>Lunch</div>
-                    <div>Shakes</div>
-                    <div>Dinner</div>
+                <div>All</div>
+                <div>Breakfast</div>
+                <div>Lunch</div>
+                <div>Shakes</div>
+                <div>Dinner</div>
             </div>
         </div>
         <div class="show-menu">
             <div class="first-menu">
-                <div class="img">
+                <div class="image">
                     <img src="./buttermilk.jpg" alt="buttermilk">
                 </div>
                 <div class="decription">
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="second-menu">
-                <div class="img">
+                <div class="image">
                     <img src="./diner-double.jpg" alt="diner-double" >
                 </div>
                 <div class="decription">
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="third-menu">
-                <div class="img">
+                <div class="image">
                     <img src="./godzilla-milkshake.jpg" alt="godzilla-milkshake" >
                 </div>
                 <div class="decription">
