--- a/TP04/Ex3/counter.html
+++ b/TP04/Ex3/counter.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
+    <link rel="stylesheet" href="./counter.css">
 </head>
 <body>
     <div class="container">
-        
+        <div class="counter">Counter</div>
+        <div class="result">7</div>
+        <div class="btn">
+            <button>DECREASE</button>
+            <button>RESET</button>
+            <button>INCREASE</button>
+        </div>
     </div>
 </body>
 </html>
