--- a/TP04/Ex3/counter.html
+++ b/TP04/Ex3/counter.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
     <link rel="stylesheet" href="./counter.css">
+    <script src="./counter.js" defer></script>
 </head>
 <body>
     <div class="container">
         <div class="counter">Counter</div>
-        <div class="result">7</div>
+        <div class="result">0</div>
         <div class="btn">
-            <button>DECREASE</button>
-            <button>RESET</button>
-            <button>INCREASE</button>
+            <button id="decrease">DECREASE</button>
+            <button id="reset">RESET</button>
+            <button id="increase">INCREASE</button>
         </div>
     </div>
 </body>
