--- a/TP04/Ex1/tab.html
+++ b/TP04/Ex1/tab.html
@@ -17,7 +17,7 @@
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>
             <div class="image">
-                <img id="img" src="https://source.unsplash.com/random/500x300/?landscape" alt="mountain">
+                <img id="img" src="./mountain.jpg" alt="mountain">
             </div>
         </div>
         <div class="content2">
