--- a/TP04/Ex2/resposiveMenu.html
+++ b/TP04/Ex2/resposiveMenu.html
@@ -10,27 +10,27 @@
 <body>
     <div class="container">
         <div class="main-menu">
-            <div class="content">
+            <div class="content header">
                 <h1>Our Menu</h1>
                 <hr>
             </div>
-            <div class="list-menu">
-                <div>All</div>
-                <div>Breakfast</div>
-                <div>Lunch</div>
-                <div>Shakes</div>
-                <div>Dinner</div>
+            <div class="list-menu header">
+                <button>All</button>
+                <button>Breakfast</button>
+                <button>Lunch</button>
+                <button>Shakes</button>
+                <button>Dinner</button>
             </div>
         </div>
         <div class="show-menu">
             <div class="first-menu">
                 <div class="image">
-                    <img src="./buttermilk.jpg" alt="buttermilk">
+                    <img src="./buttermilk.jpg" alt="buttermilk" >
                 </div>
                 <div class="decription">
                     <h3>Buttermilk Pancakes <span>$15.99</span>
-                        <hr>
                     </h3>
+                    <hr>
                     <p>I'm baby woke mlkshk wolf bitters live-edge blue <br>
                         bottle, hammock freegan copper mug whatever <br>
                         cold-pressed
@@ -43,7 +43,8 @@
                 </div>
                 <div class="decription">
                     <h3>Diner Double <span>$13.99</span>
-                    <hr></h3>
+                    </h3>
+                    <hr>
                     <p>vaporware iphonr mumblecore selvage raw denim <br>
                     slow-card leggings gochujang helvetica man braid <br>
                     jianbing. Marfa thudercats</p>
@@ -55,9 +56,10 @@
                 </div>
                 <div class="decription">
                     <h3>Godzilla Milkshake <span>$6.99</span>
-                    <hr></h3>
+                    </h3>
+                    <hr>
                     <p>ombucha chilwave fanny pack 3 walf moon street 
-                       <br> art photo booth before they sold out organic viral.</p>
+                    <br> art photo booth before they sold out organic viral.</p>
                 </div>
             </div>
         </div>
