--- a/TP04/Ex5/navBar.html
+++ b/TP04/Ex5/navBar.html
@@ -17,7 +17,7 @@
             </div>
             <div class="content">
                 <div>Home</div>
-                <div>About:</div>
+                <div>About</div>
                 <div>Projects</div>
                 <div>Contact</div>
             </div>
