--- a/TP02/Ex1/tailwaindcss.html
+++ b/TP02/Ex1/tailwaindcss.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwindcss</title>
-    <script src="./tailwindcss.js"></script>
+    <script src="../tailwindcss.js"></script>
     <!-- <link rel="stylesheet" href="/tailwindcss.css"> -->
 </head>
 <body class="h-[900px] w-full flex justify-center items-center bg-blue-700 font-medium">
