--- a/test.html
+++ b/test.html
@@ -1,126 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRUD</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-  <style>
-    body{
-      font-family: sans-serif;
-      margin: 0 50px;
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<link rel="stylesheet" href="/style.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.21.0/themes/prism-tomorrow.min.css" />
+	<title>JSONPlaceholder - Free Fake REST API</title>
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-E3C3GCQVBN"></script>
+	<script>
+		window.dataLayer = window.dataLayer || []
+    function gtag() {
+      dataLayer.push(arguments)
     }
-    .container{
-      display: flex;
-      gap: 50px;
-    }
-    #posts{
-      width: 400px;
-    }
-    i{
-      cursor: pointer;
-    }
-    #posts div{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .options{
-      display: flex;
-      gap: 25px;
-    }
-    #msg{
-      color: red;
-    }
-  </style>
+    gtag('js', new Date())
+
+    gtag('config', 'G-E3C3GCQVBN')
+	</script>
 </head>
-<body>
-  <h1>Social Media App</h1>
-  <div class="container">
-    <div class="left">
-      <form action="#" id="form">
-        <label for="post"> Write your post here</label>
-        <br><br>
-        <textarea name="post" id="input" cols="30" rows="10"></textarea>
-        <br><br>
-        <div id="msg"></div>
-        <button type="submit">Post</button>
-      </form>
-    </div>
-    <div class="right">
-      <h3>Your posts here</h3>
-      <div id="posts">
-        <div>
-          <p>Hello World Post 1</p>
-          <span class="options">
-            <i onClick="editPost(this)" class="fas fa-edit"></i>
-            <i onClick="deletePost(this)" class="fas fa-trash-alt"></i>
-          </span>
-        </div>
-        <div>
-          <p>Hello World Post 2</p>
-          <span class="options">
-            <i onClick="editPost(this)" class="fas fa-edit"></i>
-            <i onClick="deletePost(this)" class="fas fa-trash-alt"></i>
-          </span>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script>
-    let form = document.getElementById('form');
-    let input = document.getElementById('input');
-    let msg = document.getElementById('msg');
-    let posts = document.getElementById("posts");
 
-    form.addEventListener("submit",(e) =>{
-      e.preventDefault();
-      console.log("button clicked");
+<body class="px-2">
+	<header class="
+        container
+        mx-auto
+        max-w-4xl
+        flex flex-col
+        md:flex-row
+        justify-between
+        py-one
+        mb-three
+      ">
+		<h1>
+			<a href="/" class="font-bold no-underline">JSONPlaceholder</a>
+		</h1>
+		<nav>
+			<ul class="flex">
+				<li><a href="/guide" class="mr-4 no-underline">Guide</a></li>
+				<li>
+					<a href="https://github.com/sponsors/typicode" class="mr-4 no-underline">Sponsor this project</a>
+				</li>
+				<li>
+					<a href="https://blog.typicode.com" class="mr-4 no-underline">Blog</a>
+				</li>
+				<li>
+					<a href="https://my-json-server.typicode.com" class="no-underline">My JSON Server</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<div>
 
-      formValidation();
-    })
+		<section id="hero" class="-mt-three py-36 mb-six -mx-2">
+			<div class="container mx-auto max-w-4xl">
+				<span class="text-6xl bold">{JSON} Placeholder</span>
+				<h1 class="mt-two text-lg">Free fake API for testing and prototyping.</h1>
+				<p class="mb-one text-lg">
+					Powered by
+					<a href="https://github.com/typicode/json-server">JSON Server</a>
+					+
+					<a href="https://github.com/typicode/lowdb">LowDB</a>. Tested with
+					<a href="https://github.com/typicode/xv">XV</a>.
+				</p>
+				<p><b>Serving ~2 billion requests each month</b>.</p>
+			</div>
+		</section>
 
-    let formValidation = () =>{
-      if(input.value === ""){
-        msg.innerHTML = "Post cannot be blank";
-        console.log('failure');
-      }else{
-        console.log("success");
-        msg.innerHTML = "";
-        acceptData();
-      }
-    }
+		<section class="container mx-auto max-w-4xl mb-six">
+			<h2 class="text-2xl mb-one">Sponsors</h2>
+			<p class="mb-two">
+				JSONPlaceholder is supported by the following companies and
+				<a href="https://github.com/sponsors/typicode">Sponsors</a> on GitHub, check
+				them out 💖
+			</p>
+			<p>
+				<a href="https://tryretool.com/?utm_source=sponsor&utm_campaign=typicode" target="_blank">
+					<img src="https://i.imgur.com/IBItATn.png" class="h-three mb-two" />
+</a>
+			</p>
+			<p>
+				<a href="https://mockend.com" target="_blank">
+					<img src="mockend.svg" class="h-three mb-two" />
+</a>
+			</p>
+			<p>
+				<a href="https://megafamous.com/buy-instagram-followers" target="_blank">
+					<img src="megafamous.png" class="h-three mb-two" />
+</a>
+			</p>
+			<p>
+				<a href="http://asocks.com/c/TFw5bz" target="_blank">
+					<img src="asocks.png" class="h-three mb-two" />
+</a>
+			</p>
+			<p class="my-two">
+				<a href="https://github.com/sponsors/typicode">Your company logo here</a>
+			</p>
+		</section>
 
-    let data = {};
+		<section class="container mx-auto max-w-4xl mb-four">
+			<h2 class="text-2xl mb-one">Try it</h2>
+			<p>Run this code here, in a console or from any site:</p>
+			<pre><code id="example" class="language-javascript">fetch('https://jsonplaceholder.typicode.com/todos/1')
+      .then(response => response.json())
+      .then(json => console.log(json))</code></pre>
+			<button id="run-button" class="
+      bg-green-500
+      hover:bg-green-700
+      text-white
+      font-bold
+      py-quarter
+      my-quarter
+      px-4
+      rounded
+    ">
+Run script
+</button>
+			<pre><code id="result" class="language-javascript">{}</code></pre>
+			<p id="run-message" class="invisible">
+				Congrats you've made your first call to JSONPlaceholder! 😃 🎉
+			</p>
+			<div class="horizontal flat" data-ea-publisher="jsonplaceholdertypicodecom" data-ea-style="stickybox"
+				data-ea-keywords="javascript|typescript|python|ruby|swift|react|vue|web|testing|frontend|front-end|backend|back-end"
+				data-ea-manual="true"></div>
+		</section>
+		<main class="container mx-auto max-w-4xl">
+			<h2>When to use</h2>
+			<p>JSONPlaceholder is a free online REST API that you can use
+				<strong>whenever you need some fake data</strong>. It can be in a README on GitHub, for a demo on
+				CodeSandbox, in code examples on Stack Overflow, ...or simply to test things locally.</p>
+			<h2>Resources</h2>
+			<p>JSONPlaceholder comes with a set of 6 common resources:</p>
+			<table>
+				<thead>
+					<tr>
+						<th></th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><a href="/posts">/posts</a></td>
+						<td>100 posts</td>
+					</tr>
+					<tr>
+						<td><a href="/comments">/comments</a></td>
+						<td>500 comments</td>
+					</tr>
+					<tr>
+						<td><a href="/albums">/albums</a></td>
+						<td>100 albums</td>
+					</tr>
+					<tr>
+						<td><a href="/photos">/photos</a></td>
+						<td>5000 photos</td>
+					</tr>
+					<tr>
+						<td><a href="/todos">/todos</a></td>
+						<td>200 todos</td>
+					</tr>
+					<tr>
+						<td><a href="/users">/users</a></td>
+						<td>10 users</td>
+					</tr>
+				</tbody>
+			</table>
+			<p><strong>Note</strong>: resources have relations. For example: posts have many comments, albums have many
+				photos, ... see <a href="/guide">guide</a> for the full list.</p>
+			<h2>Routes</h2>
+			<p>All HTTP methods are supported. You can use http or https for your requests.</p>
+			<table>
+				<thead>
+					<tr>
+						<th></th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>GET</td>
+						<td><a href="/posts">/posts</a></td>
+					</tr>
+					<tr>
+						<td>GET</td>
+						<td><a href="/posts/1">/posts/1</a></td>
+					</tr>
+					<tr>
+						<td>GET</td>
+						<td><a href="/posts/1/comments">/posts/1/comments</a></td>
+					</tr>
+					<tr>
+						<td>GET</td>
+						<td><a href="/comments?postId=1">/comments?postId=1</a></td>
+					</tr>
+					<tr>
+						<td>POST</td>
+						<td>/posts</td>
+					</tr>
+					<tr>
+						<td>PUT</td>
+						<td>/posts/1</td>
+					</tr>
+					<tr>
+						<td>PATCH</td>
+						<td>/posts/1</td>
+					</tr>
+					<tr>
+						<td>DELETE</td>
+						<td>/posts/1</td>
+					</tr>
+				</tbody>
+			</table>
+			<p><strong>Note</strong>: see <a href="/guide">guide</a> for usage examples.</p>
+			<h2>Use your own data</h2>
+			<p>With our sponsor <a href="https://mockend.com">Mockend</a> and a simple GitHub repo, you can have your
+				own fake online REST server in seconds.</p>
+		</main>
+		<script>
+			// Use http or https based on location.protocol
+  var example = document.getElementById('example')
+  example.textContent = example.textContent.replace('http:', location.protocol)
 
-    let acceptData = () =>{
-      data["text"] = input.value;
-      console.log(data);
-      createPost();
-    };
+  // Highlight result element
+  var result = document.getElementById('result')
 
-    let createPost = () =>{
-      posts.innerHTML += `
-      <div>
-          <p>${data.text}</p>
-          <span class="options">
-            <i onClick="editPost(this)" class="fas fa-edit"></i>
-            <i onClick="deletePost(this)" class="fas fa-trash-alt"></i>
-          </span>
-      </div>
-      `
-      input.value = "";
-    }
+  // Run example
+  var runButton = document.getElementById('run-button')
+  runButton.onclick = function () {
+    var root = location.protocol + '//jsonplaceholder.typicode.com'
+    var runMessage = document.getElementById('run-message')
 
-    let deletePost = (e) =>{
-      e.parentElement.parentElement.remove();
-    }
+    fetch('https://jsonplaceholder.typicode.com/todos/1')
+      .then((response) => response.json())
+      .then((json) => {
+        var str = JSON.stringify(json, null, '  ')
 
-    let editPost = (e) =>{
-      input.value = e.parentElement.previousElementSibling.innerHTML;
-      e.parentElement.parentElement.remove();
-    }
-  </script>
+        // Format result
+        result.innerHTML = Prism.highlight(
+          str,
+          Prism.languages.javascript,
+          'javascript',
+        )
+
+        runMessage.className = ''
+      })
+  }
+		</script>
+	</div>
+
+	<footer class="container mx-auto max-w-4xl mt-four">
+		<div class="mb-one">
+			<a href="https://github.com/users/typicode/sponsorship">
+				<strong>You can sponsor this project (and others) on GitHub</strong>
+			</a>
+		</div>
+		<div class="mb-one">
+			Coded and maintained with ❤️ by
+			<a href="https://github.com/typicode">typicode</a> © 2022
+		</div>
+	</footer>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.21.0/prism.min.js"></script>
+	<script src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
+	<script src="/script.js"></script>
+	<script defer
+		src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993"
+		integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA=="
+		data-cf-beacon='{"rayId":"79ecb516abf3a483","version":"2023.2.0","r":1,"token":"2f059cbf58a24e59854ee0884c97b166","si":100}'
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
