--- a/TP05/Ex5/see.html
+++ b/TP05/Ex5/see.html
@@ -71,22 +71,21 @@
         // console.log(id);
         const getData = (()=>{
             fetch(`https://jsonplaceholder.typicode.com/photos/${id}`).then(res=>res.json()).then(data=>{
-                document.querySelector('.container').innerHTML=
-                `
-                <div class="section1">
-                    <h2>${data.title}</h2>
-                    <p>${data.id}</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div class="section2">
-                    <p>${data.id}</p>
-                    <div>
-                        <img src="${data.thumbnailUrl}" alt="album-${data.id}">
+                document.querySelector('.container').innerHTML =`
+                    <div class="section1">
+                        <h2>${data.title}</h2>
+                        <p>${data.id}</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
-                </div>
+                    <div class="section2">
+                        <p>${data.id}</p>
+                        <div>
+                            <img src="${data.thumbnailUrl}" alt="album-${data.id}">
+                        </div>
+                    </div>
                 `
-                })
-            })()
-        </script>
+            })
+        })()
+    </script>
 </body>
 </html>
