--- a/TP05/Ex3/n-g.html
+++ b/TP05/Ex3/n-g.html
@@ -16,7 +16,7 @@
                 🌎
             </div>
             <div>
-                <h1>I know your <span style="color: rgb(36, 118, 240);">Gender</span></h1><br>
+                <h1>I know your <span style="color: rgb(36, 118, 240);">National</span></h1><br>
             </div>
             <div>
                 <input id="input" type="text" placeholder="Tell me your name">
