--- a/TP06/Ex2/localDataAsync.html
+++ b/TP06/Ex2/localDataAsync.html
@@ -6,91 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>localDataAsync</title>
     <link rel="stylesheet" href="localDataAsync.css">
+    <script src="./localDataAsync.js" defer></script>
 </head>
 <body>
     <div class="container">
         <div class="pageLoad">1</div>
         <div class="dataLoad">
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
-            <div class="item">
-                <div>✈️:Cambodia-PP</div>
-                <div>😊Den</div>
-            </div>
+           
         </div>
     </div>
 </body>
