--- a/TP06/Ex3/list.html
+++ b/TP06/Ex3/list.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagination</title>
-    <link rel="stylesheet" href="pagination.css">
-    <script src="./pagination.js" defer></script>
+    <title>Document</title>
+    <link rel="stylesheet" href="./list.css">
+    <script src="./list.js" defer></script>
 </head>
 <body>
     <div class="container">
         <div class="pageLoad">1</div>
         <div class="dataLoad">
-    
+           
         </div>
     </div>
 </body>
