--- a/TP06/Ex3/list.html
+++ b/TP06/Ex3/list.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="pageLoad"></div>
+        <!-- <div class="pageLoad"></div> -->
         <div class="dataLoad">
         </div>
+        <div class="detail"></div>
     </div>
 </body>
 </html>
